# QtClient

./: .gitignore  CMakeLists.txt  client.json
include/: broadcaster.h  mqt.h  mqtmessage.h  mqtsockio.h
src/: broadcaster.cc  main.cc  mqt.cc  mqtmessage.cc  mqtsockio.cc
